themes/carvel/assets/scss/_components.scss
/* ... */
#docs {
    background-color: unset;
    .hero {
        padding: 40px 0px 100px 0px;
        background-color: #00C1D5;
    }
}
.docs {
    background-color: #fff;
    margin-top: -90px;
    padding: 50px 30px 50px 30px;
    h1 {
        color: #000;
    }
    .side-nav {
        width: 25%;
        float: left;
        position: relative;
        border-right: 1px solid $lightgrey;
        .dropdown {
            font-size: 14px;
            font-family: $metropolis-medium;
            margin-bottom: 10px;
            button {
                background-image: url(/img/down-arrow.svg);
                background-repeat: no-repeat;
                background-position: right center;
                display: inline;
                padding: 0px 15px 0 0;
                border: none;
                color: $black;
                font-size: 14px;
                font-family: $metropolis-medium;
                margin-bottom: 10px;
                &:focus {
                    outline: none;
                }
            }
        }
        .dropdown-menu {
            position: absolute;
            border: 1px solid $grey;
            border-radius: 5px;
            top: 30px;
            left: 0px;
            background-color: $white;
            padding: 10px 20px;
            min-width: 100px;
            display: none;
            a {
                display: block;
                margin: 7px 0px;
            }
            &.dropdown-menu-visible {
                display: block;
            }
        }
        .form-control {
            display: block;
            width: 100%;
            height: 40px;
            padding: .375rem .75rem;
            font-size: 1.125rem;
            line-height: 1.5;
            color: $grey;
            background-color: #fff;
            border: 1px solid #cecece;
            background-image: url(/img/search-icon.svg);
            background-repeat: no-repeat;
            background-position: 95% center;
            &:focus {
                outline: none;
            }
            &::-webkit-search-cancel-button {
                -webkit-appearance: none;
            }
        }
        .ds-dataset-1 {
            padding: 5px;
        }
        .ds-dropdown-menu {
            background-color: #fff;
            border: 1px solid #cecece;
        }
        a.active {
            background: $lightgrey;
            padding: 5px 7px;
            margin-left: -7px;
        }
        h3 {
            font-size: 18px;
            font-family: $metropolis-medium;
            margin-bottom: 10px;
        }
        ul {
            padding-left: 0px;
            margin-top: 0;
            margin-bottom: 35px;
            list-style-type: none;
            li {
                a {
                    font-size: 14px;
                    font-weight: 300;
                }
                &.heading {
                    color: $black;
                    font-size: 14px;
                }
            }
        }
    }
    .docs-content {
        width: 72%;
        float: right;
        a {
            font-family: $metropolis-regular;
        }
        ul {
            list-style-type: disc;
            padding-left: 20px;
            li {
                list-style-type: disc;
                display: list-item;
                margin-bottom: 4px;
                ul {
                    margin-top: 4px;
                }
            }
        }
        ol {
            padding-left: 20px;
            li {
                list-style-type: decimal;
                display: list-item;
                margin-bottom: 10px;
            }
        }
        img {
            max-width: 100%;
        }
    }
    @include breakpoint(small) {
        .side-nav {
            width: 100%;
            .algolia-autocomplete {
                width: 100%;
            }
        }
        .docs-content {
            width: 100%;
        }
    }
}
/* ... */

